fix: fix phone number

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
@@ -66,7 +66,7 @@
             <section class="contacts">
                 <h2 class="header__subtitle">Contacts</h2>
                 <ul class="contacts__items">
-                    <li class="contacts__item"><a href="tel:+7 (919) 041-02-97">phone: +7 (919) 041-02-97</a></li>
+                    <li class="contacts__item"><a href="tel:+79190410297">phone: +7(919)041-02-97</a></li>
                     <li class="contacts__item"><a href="mailto:nikitenuss@mail.ru">e-mail: nikitenuss@mail.ru</a></li>
                     <li class="contacts__item"><a href="https://t.me/nikitenus">telegram: @nikitenus</a></li>
                 </ul>
