--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -25,8 +24,7 @@
             <section class="skills">
                 <h2 class="header__subtitle">Skills</h2>
                 <ul class="skills__items">
-                    <li class="skills__item">HTML</li>
-                    <li class="skills__item">CSS</li>
+                    <li class="skills__item">HTML&amp;CSS</li>
                     <li class="skills__item">JS</li>
                     <li class="skills__item">TDD</li>
                     <li class="skills__item">GIT</li>
@@ -39,8 +37,8 @@
                 <div class="container">
                     <p class="code__text">
                         function accum(s) {<br>
-                        return s.split('')<br>.map((el, i) => el<br>.toUpperCase() + Array(i +
-                        1)<br>.join(el.toLowerCase()))<br>.join('-');br
+                            &nbsp;return s.split('')<br>&nbsp;.map((el, i) => el<br>&nbsp;.toUpperCase() + Array(i +
+                        1)<br>&nbsp;.join(el.toLowerCase()))<br>&nbsp;.join('-');br
                         }
                     </p>
                 </div>
@@ -66,9 +64,9 @@
             <section class="contacts">
                 <h2 class="header__subtitle">Contacts</h2>
                 <ul class="contacts__items">
-                    <li class="contacts__item"><a href="tel:+79190410297">phone: +7(919)041-02-97</a></li>
+                    <li class="contacts__item"><a href="tel:+79190410297">phone:&nbsp;+7&nbsp;919&nbsp;041-02-97</a></li>
                     <li class="contacts__item"><a href="mailto:nikitenuss@mail.ru">e-mail: nikitenuss@mail.ru</a></li>
-                    <li class="contacts__item"><a href="https://t.me/nikitenus">telegram: @nikitenus</a></li>
+                    <li class="contacts__item"><a href="https://t.me/nikitenus">telegram:&nbsp;@nikitenus</a></li>
                 </ul>
             </section>
         </div>
