fix: minor improvements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>CV</title>
 </head>
 <body>
 <div class="wrapper">
@@ -53,8 +53,8 @@
             <section class="languages">
                 <h2 class="header__subtitle">Languages</h2>
                 <ul class="languages__items">
-                    <li class="language_item">Russian - native</li>
-                    <li class="language_item">English - B1</li>
+                    <li class="language_item">Russian / native</li>
+                    <li class="language_item">English / B1</li>
                 </ul>
             </section>
         </div>
@@ -64,9 +64,9 @@
             <section class="contacts">
                 <h2 class="header__subtitle">Contacts</h2>
                 <ul class="contacts__items">
-                    <li class="contacts__item"><a href="tel:+79190410297">phone:&nbsp;+7&nbsp;919&nbsp;041-02-97</a></li>
-                    <li class="contacts__item"><a href="mailto:nikitenuss@mail.ru">e-mail: nikitenuss@mail.ru</a></li>
-                    <li class="contacts__item"><a href="https://t.me/nikitenus">telegram:&nbsp;@nikitenus</a></li>
+                    <li class="contacts__item"><a href="tel:+79190410297">phone: +7&nbsp;919&nbsp;0410296</a></li>
+                    <li class="contacts__item"><a href="mailto:nikitenuss@mail.ru">email: nikitenuss@mail.ru</a></li>
+                    <li class="contacts__item"><a href="https://t.me/nikitenus">telegram: @nikitenus</a></li>
                 </ul>
             </section>
         </div>
