fix: minor improvements

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <p class="code__text">
                         function accum(s) {<br>
-                            &nbsp;return s.split('')<br>&nbsp;.map((el, i) => el<br>&nbsp;.toUpperCase() + Array(i +
+                        &nbsp;return s.split('')<br>&nbsp;.map((el, i) => el<br>&nbsp;.toUpperCase() + Array(i +
                         1)<br>&nbsp;.join(el.toLowerCase()))<br>&nbsp;.join('-');br
                         }
                     </p>
@@ -64,9 +64,9 @@
             <section class="contacts">
                 <h2 class="header__subtitle">Contacts</h2>
                 <ul class="contacts__items">
-                    <li class="contacts__item"><a href="tel:+79190410297">phone: +7&nbsp;919&nbsp;0410296</a></li>
-                    <li class="contacts__item"><a href="mailto:nikitenuss@mail.ru">email: nikitenuss@mail.ru</a></li>
-                    <li class="contacts__item"><a href="https://t.me/nikitenus">telegram: @nikitenus</a></li>
+                    <li class="contacts__item">phone: <a href="tel:+79190410297">+7&nbsp;919&nbsp;0410296</a></li>
+                    <li class="contacts__item">email: <a href="mailto:nikitenuss@mail.ru"> nikitenuss@mail.ru</a></li>
+                    <li class="contacts__item">telegram: <a href="https://t.me/nikitenus">@nikitenus</a></li>
                 </ul>
             </section>
         </div>
