fix: minor improvements

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <p class="code__text">
                         function accum(s) {<br>
-                        &nbsp;return s.split('')<br>&nbsp;.map((el, i) => el<br>&nbsp;.toUpperCase() + Array(i +
+                        &nbsp;return s.split('')<br>&nbsp;.map((el, i) -&gt; el<br>&nbsp;.toUpperCase() + Array(i +
                         1)<br>&nbsp;.join(el.toLowerCase()))<br>&nbsp;.join('-');br
                         }
                     </p>
